# ReferMe

./: db.sqlite3  pyproject.toml
graphene_test_api/: manage.py
graphene_test_api/graphene_test_api/: asgi.py  settings.py  urls.py  wsgi.py
graphql/: settings.py  urls.py
